# Aegis

./: .dockerignore  .gitignore  Dockerfile  README.md  analyst_server.py  docker-compose.yml  pyproject.toml
autonomy/: acoustic_benchmark.py  acoustic_cross_validation.py  acoustic_intelligence.py  candidate_ranking.py  cascade_ranking_benchmark.py  clip_semantic_scorer.py  contact_tracker.py  dashboard_auth.py  dashboard_metrics.py  detection_metrics.py  finetune_yolo.py  georeference.py  memory_ablation.py  memory_priors.py  mission_benchmark_suite.py  mission_evaluation.py  mission_memory.py  mission_objective.py  multisensor_mission_demo.py  objectness_proposal_detector.py  run_search_mission.py  semantic_vision.py  system_benchmark.py  vision_lab.py  visual_cross_validation.py  yolo_proposal_detector.py
docs/: ACOUSTIC_BENCHMARK_TUNING_REPORT.md  ACOUSTIC_BENCHMARK_V1_SNIPPET.md  ACOUSTIC_INTELLIGENCE_ROADMAP.md  AEGIS_MISSION_INTELLIGENCE_V1.md  AUTONOMY_STACK.md  CLOSED_LOOP_DEMO_RUNBOOK.md  DEMO_VIDEO_COMMANDS.md  DEMO_VIDEO_PLAN.md  DEPLOYMENT_AWS.md  DRONEVEHICLE_VISUAL_CROSS_VALIDATION_REPORT.md  FINETUNE_YOLO.md  IR_LAYER_RECALIBRATION_REPORT.md  LEARNED_MODELS.md  LINKEDIN_POST_AEGIS_VEHICLE_MODALITY_BENCHMARK.md  LOAD_HANDLING.md  MULTISENSOR_SHORELINE_DEMO.md  PORTFOLIO_AEGIS_MODALITY_INTELLIGENCE.md  RUNNING_BENCHMARKS.md  SYSTEM_BENCHMARK_V1_REPORT.md  VEHICLE_BENCHMARK_REPORT.md
scripts/: check_openai_vision_env.sh  run_acoustic_benchmark_v1.sh  run_acoustic_cross_validation_v1.sh  run_acoustic_evidence.sh  run_analyst_dashboard.sh  (+6 more)
(+31 files in other folders)
