[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-intelligence-layer"
version = "0.1.0"
description = "Mission intelligence platform: mission planning, proposal detection, semantic scoring, candidate ranking, analyst review, and mission memory for robotic and sensor systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Noah" }]
dependencies = [
    "numpy>=1.24",
    "opencv-python>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]
# Learned models (CLIP semantic scoring, YOLO proposals). Everything runs
# without these; install them to enable --semantic-vision clip and
# --proposal-mode yolo. All inference is local — no cloud API required.
ml = [
    "torch>=2.1",
    "open-clip-torch>=2.24",
    "pillow>=10.0",
    "ultralytics>=8.1",
]

[tool.setuptools]
packages = ["autonomy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
